Fix spacing in i5

--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,12 @@ section {
 	margin-left: auto;
 	margin-right: auto;
 	text-align: left;
-  padding: 0 10%;
+  padding: 0 7%;
+}
+@media (max-width: 520px) {
+  section {
+    padding: 0 3%;
+  }
 }
 
 a {
@@ -146,6 +151,7 @@ a:hover {
 
 #footer .contact {
   margin-top: 160px;
+  margin-bottom: 44px;
   font-size: 18px;
 }
 #footer p {
